--- a/src/App.css
+++ b/src/App.css
@@ -183,6 +183,70 @@
   top: 1.1rem;
 }
 
+@media (max-width: 640px) {
+  .ur-tooth svg,
+  .ul-tooth svg,
+  .br-tooth svg,
+  .bl-tooth svg {
+    width: 0.7rem;
+    height: 1.3rem;
+  }
+}
+
+@media (min-width: 320px) {
+  .ur-tooth svg,
+  .ul-tooth svg,
+  .br-tooth svg,
+  .bl-tooth svg {
+    width: 0.85rem;
+    height: 1.3rem;
+  }
+  .ur-tooth,
+  .ul-tooth,
+  .br-tooth,
+  .bl-tooth {
+    height: 1.5rem;
+  }
+  #mob-border {
+    top: -10px;
+  }
+}
+@media (min-width: 370px) {
+  .ur-tooth svg,
+  .ul-tooth svg,
+  .br-tooth svg,
+  .bl-tooth svg {
+    width: 1.1rem;
+    height: 1.3rem;
+  }
+
+  #mob-border {
+    margin: 2px 0px;
+  }
+}
+@media (min-width: 420px) {
+  .ur-tooth svg,
+  .ul-tooth svg,
+  .br-tooth svg,
+  .bl-tooth svg {
+    width: 1.3rem;
+    height: 1.3rem;
+  }
+
+  #mob-border {
+    margin: 2px 0px;
+  }
+}
+@media (min-width: 641px) and (max-width: 768px) {
+  .ur-tooth svg,
+  .ul-tooth svg,
+  .br-tooth svg,
+  .bl-tooth svg {
+    width: 0.85rem;
+    height: 1.6rem;
+  }
+}
+
 #isView svg {
   height: 2rem;
   width: 1.1rem;
