--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,7 @@
   position: relative;
   top: 1.1rem;
 }
+
 .ur-tooth svg:nth-child(1) {
   position: relative;
   top: -0.4rem;
@@ -184,6 +185,7 @@
 }
 
 @media (max-width: 640px) {
+
   .ur-tooth svg,
   .ul-tooth svg,
   .br-tooth svg,
@@ -194,6 +196,7 @@
 }
 
 @media (min-width: 320px) {
+
   .ur-tooth svg,
   .ul-tooth svg,
   .br-tooth svg,
@@ -201,30 +204,38 @@
     width: 0.85rem;
     height: 1.3rem;
   }
+
   .ur-tooth,
   .ul-tooth,
   .br-tooth,
   .bl-tooth {
-    height: 1.5rem;
+    height: 2rem;
   }
+
   #mob-border {
     top: -10px;
   }
 }
+
 @media (min-width: 370px) {
+
   .ur-tooth svg,
   .ul-tooth svg,
   .br-tooth svg,
   .bl-tooth svg {
     width: 1.1rem;
-    height: 1.3rem;
+    height: 1.9rem;
   }
 
   #mob-border {
     margin: 2px 0px;
+    position: relative;
+    top: -8px !important
   }
 }
+
 @media (min-width: 420px) {
+
   .ur-tooth svg,
   .ul-tooth svg,
   .br-tooth svg,
@@ -237,7 +248,9 @@
     margin: 2px 0px;
   }
 }
+
 @media (min-width: 641px) and (max-width: 768px) {
+
   .ur-tooth svg,
   .ul-tooth svg,
   .br-tooth svg,
