--- a/src/App.css
+++ b/src/App.css
@@ -195,14 +195,14 @@
   }
 }
 
-@media (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 369px) {
 
   .ur-tooth svg,
   .ul-tooth svg,
   .br-tooth svg,
   .bl-tooth svg {
     width: 0.85rem;
-    height: 1.3rem;
+    height: 1.5rem;
   }
 
   .ur-tooth,
@@ -217,36 +217,36 @@
   }
 }
 
-@media (min-width: 370px) {
+@media (min-width: 370px) and (max-width: 419px) {
 
   .ur-tooth svg,
   .ul-tooth svg,
   .br-tooth svg,
   .bl-tooth svg {
     width: 1.1rem;
-    height: 1.9rem;
+    height: 1.4rem;
   }
 
   #mob-border {
-    margin: 2px 0px;
+    margin: 6px 0px;
     position: relative;
-    top: -8px !important
+    top: -7px !important
   }
 }
 
-@media (min-width: 420px) {
+@media (min-width: 420px) and (max-width: 640px) {
 
   .ur-tooth svg,
   .ul-tooth svg,
   .br-tooth svg,
   .bl-tooth svg {
     width: 1.3rem;
-    height: 2rem;
+    height: 1.5rem;
   }
 
   #mob-border {
-    margin: 2px 0px;
-    top: -9px !important;
+    margin: 7px 0px;
+    top: -6px !important;
   }
 }
 
