--- a/src/index.css
+++ b/src/index.css
@@ -87,22 +87,15 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 0.4em;
   font-size: 0.8em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #ffffff;
   cursor: pointer;
   transition: border-color 0.25s;
+  outline: none;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+
 
 @media (prefers-color-scheme: light) {
   :root {
